--- a/dotfiles/i3status.toml
+++ b/dotfiles/i3status.toml
@@ -13,6 +13,12 @@ warning_cpu = 50
 critical_cpu = 90
 
 [[block]]
+block = "temperature"
+
+[[block]]
+block = "battery"
+
+[[block]]
 block = "memory"
 format = " $icon $mem_total_used_percents.eng(w:2) "
 format_alt = " $icon_swap $swap_used_percents.eng(w:2) "
