--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -30,5 +30,9 @@ bind -n F1 if-shell 'tmux select-window -t :1' '' 'new-window -t :1 -c "#{pane_c
 bind -n F2 if-shell 'tmux select-window -t :2' '' 'new-window -t :2 -c "#{pane_current_path}"'
 bind -n F3 if-shell 'tmux select-window -t :3' '' 'new-window -t :3 -c "#{pane_current_path}"'
 bind -n F4 if-shell 'tmux select-window -t :4' '' 'new-window -t :4 -c "#{pane_current_path}"'
+bind -n F5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5 -c "#{pane_current_path}"'
+bind -n F6 if-shell 'tmux select-window -t :6' '' 'new-window -t :6 -c "#{pane_current_path}"'
+bind -n F7 if-shell 'tmux select-window -t :7' '' 'new-window -t :7 -c "#{pane_current_path}"'
+bind -n F8 if-shell 'tmux select-window -t :8' '' 'new-window -t :8 -c "#{pane_current_path}"'
 
 run '~/.tmux/plugins/tpm/tpm'
