--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -13,7 +13,7 @@ set -g repeat-time 300
 set -ga terminal-overrides ",alacritty:Tc"
 set -gw pane-base-index 1
 set -gw xterm-keys on
-set-option -g renumber-windows on
+set -g renumber-windows on
 
 bind h select-pane -L
 bind j select-pane -D
