--- a/dotfiles/alacritty.toml
+++ b/dotfiles/alacritty.toml
@@ -76,3 +76,6 @@ opacity                   = 0.97
 [window.padding]
 x                          = 0
 y                          = 5
+
+[cursor]
+style = {shape = "Beam", blinking = "Never" }
