--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -9,3 +9,6 @@
     dark = true      # or light = true, or omit for auto-detection
 [merge]
     conflictstyle = zdiff3
+[user]
+	email = alexlatour@gmail.com
+	name = Alexander Latour
