--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,8 +1,14 @@
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+set -g @plugin 'omerxx/tmux-floax'
+set -g @floax-bind "+"
+set -g @floax-change-path 'true'
+set -g @floax-bind-menu '?'
+set -g @floax-border-color '#44475A'
+
+set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "false"
 
 set -g base-index 1
