--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,14 +1,10 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'omerxx/tmux-floax'
-set -g @floax-bind "+"
-set -g @floax-change-path 'true'
-set -g @floax-bind-menu '?'
-set -g @floax-border-color '#44475A'
-
 set -g @plugin 'dracula/tmux'
+
 set -g @dracula-plugins "false"
 
 set -g base-index 1
@@ -40,5 +36,14 @@ bind -n F5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5 -c "#{pane_c
 bind -n F6 if-shell 'tmux select-window -t :6' '' 'new-window -t :6 -c "#{pane_current_path}"'
 bind -n F7 if-shell 'tmux select-window -t :7' '' 'new-window -t :7 -c "#{pane_current_path}"'
 bind -n F8 if-shell 'tmux select-window -t :8' '' 'new-window -t :8 -c "#{pane_current_path}"'
+
+set -g @floax-bind 'f'
+set -g @floax-width '98%'
+set -g @floax-height '98%'
+set -g @floax-change-path 'true'
+set -g @floax-session-name ' '
+set -g @floax-title '─'
+set -g @floax-border-color '#6272a4'
+set -g @floax-bind-menu 'P'
 
 run '~/.tmux/plugins/tpm/tpm'
