--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -2,17 +2,15 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'omerxx/tmux-floax'
 set -g @plugin 'dracula/tmux'
 
 set -g @dracula-plugins "false"
 
 set -g base-index 1
-set -g default-terminal "alacritty"
-set -g default-terminal "screen-256color"
-set -g default-terminal tmux-256color
+set -g default-terminal "ghostty"
 set -g repeat-time 300
-set -ga terminal-overrides ",alacritty:Tc"
+set -g default-terminal screen-256color
+set -g terminal-overrides ",ghostty:RGB"
 set -gw pane-base-index 1
 set -gw xterm-keys on
 set -g renumber-windows on
@@ -27,6 +25,7 @@ bind C-l send-keys C-l
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind m set -g mouse \; display "Mouse: #{?mouse,ON,OFF}"
 
 bind -n F1 if-shell 'tmux select-window -t :1' '' 'new-window -t :1 -c "#{pane_current_path}"'
 bind -n F2 if-shell 'tmux select-window -t :2' '' 'new-window -t :2 -c "#{pane_current_path}"'
@@ -36,14 +35,5 @@ bind -n F5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5 -c "#{pane_c
 bind -n F6 if-shell 'tmux select-window -t :6' '' 'new-window -t :6 -c "#{pane_current_path}"'
 bind -n F7 if-shell 'tmux select-window -t :7' '' 'new-window -t :7 -c "#{pane_current_path}"'
 bind -n F8 if-shell 'tmux select-window -t :8' '' 'new-window -t :8 -c "#{pane_current_path}"'
-
-set -g @floax-bind 'f'
-set -g @floax-width '98%'
-set -g @floax-height '98%'
-set -g @floax-change-path 'true'
-set -g @floax-session-name ' '
-set -g @floax-title '─'
-set -g @floax-border-color '#6272a4'
-set -g @floax-bind-menu 'P'
 
 run '~/.tmux/plugins/tpm/tpm'
